--- a/m01.htm
+++ b/m01.htm
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-<script type="text/javascript" src="https://me.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=NJ0ZEGYuK4dIViytkj14xKiP_DbS5ctXTGFRc1NWJOjf-CX8aqblBRareZ8XIQxYStvJ9iozRd-TNU1sllJqUI1X5JF7fPsrJCDaDDg1K3_y2RYnuzAoUxlUlH6JZCvz-dWCCqgHKhIOedzOzSfxokoUUK2K3BX42F1dhaJNAsaSVPrdXXCyKGk7Djj3_Wj4IqNxu0qxg11fy7I28aR07p1REC_q6GoqHxhTANZ4Y5k" charset="UTF-8"></script><style>
+<style>
 img {
     max-width: 100%;
     height: auto;
