--- a/co01.htm
+++ b/co01.htm
@@ -14,12 +14,19 @@ img {
 
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Cover.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_001.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_002.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_003.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_004.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_005.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_006.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_007.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_008.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_009.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_010.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_011.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_012.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_013.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter01/Chapater1_014.jpg">
 
 
 
