--- a/co02.htm
+++ b/co02.htm
@@ -14,11 +14,19 @@ img {
 
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/Cover2.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/CH2_001.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/CH2_002.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/CH2_003.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/CH2_004.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/CH2_005.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/CH2_006.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/CH2_007.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/CH2_008.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/CH2_009.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/CH2_010.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/CH2_011.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter02/CH2_012.jpg">
+
+
 
 
 
