--- a/co05.htm
+++ b/co05.htm
@@ -14,12 +14,19 @@ img {
 
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_Cover.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_001.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_002.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_003.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_004.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_005.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_006.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_007.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_008.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_009.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_010.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_011.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_012.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_013.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/series2/chapter05/CH5_014.jpg">
 
 
 
