--- a/co06.htm
+++ b/co06.htm
@@ -14,11 +14,17 @@ img {
 
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/cover1/CH6.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter06/CH6_001.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter06/CH6_002.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter06/CH6_003.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter06/CH6_004.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter06/CH6_005.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter06/CH6_006.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter06/CH6_007.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter06/CH6_008.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter06/CH6_009.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter06/CH6_010.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter06/CH6_011.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter06/CH6_012.jpg">
 
 
 
