--- a/co08.htm
+++ b/co08.htm
@@ -13,12 +13,18 @@ img {
 <body style= margin-bottom:80px;>
 
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/cover1/CH8.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter08/CH8_001.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter08/CH8_002.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter08/CH8_003.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter08/CH8_004.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter08/CH8_005.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter08/CH8_006.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter08/CH8_007.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter08/CH8_008.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter08/CH8_009.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter08/CH8_010.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter08/CH8_011.jpg">
+
 
 
 
