--- a/co10.htm
+++ b/co10.htm
@@ -14,10 +14,15 @@ img {
 
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/cover1/CH10.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter10/CH10_001.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter10/CH10_002.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter10/CH10_003.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter10/CH10_004.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter10/CH10_005.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter10/CH10_006.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter10/CH10_007.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter10/CH10_008.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter10/CH10_009.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter10/CH10_010.jpg">
 
 
 
