--- a/co12.htm
+++ b/co12.htm
@@ -13,12 +13,18 @@ img {
 <body style= margin-bottom:80px;>
 
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/cover1/CH12.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter12/CH12_001.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter12/CH12_002.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter12/CH12_003.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter12/CH12_004.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter12/CH12_005.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter12/CH12_006.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter12/CH12_007.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter12/CH12_008.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter12/CH12_009.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter12/CH12_010.jpg">
 <img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter12/CH12_011.jpg">
+<img src="https://freefiremobile-a.akamaihd.net/common/web_event/officialwebsite/comic/Chapter12/CH12_012.jpg">
 
 
 
